Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30456

Galera / MariaDB issue with ALTER TABLE statement still propagating to other cluster members in TOI while it failed on origin server

    XMLWordPrintable

Details

    • Unexpected results
    • Tested on 10.6.24, the issue is not reproducible anymore.
    • Q4/2025 Galera Maintenance

    Description

      Hi, I'm new here so I'm not really sure what are the minimal requirements for a bug report so I'll just work from my own experience for now:

      We had an incident this morning whereby an ALTER TABLE statement was executed on a server in a cluster of 3 servers. This became an outage for us because the statement resulted in a COPY algorithm being used on a large table (in member 2 and 3 of the cluster) which (at least in my opinion) should have been prevented by the statements that were done on member 1 of the cluster:

      SET SESSION alter_algorithm="INSTANT";
      alter table some_large_table_containing_blobs
          modify type enum ('existing_option1','existing_option3','existing_option2') null;
      

      Note that the enum order changed by accident which caused the COPY algorithm to be needed which made it fail on member 1 which in turn didn't stop it from propagating the query to the other cluster members somehow (this seems like unwanted behavior to me). I've checked this by using SHOW PROCESSLIST; on all machines and found that it was only running on both members 2 and 3 while it clearly showed me the following error on member 1 to which I was connected while running the queries: ALGORITHM=INSTANT is not supported. Reason: Cannot change column type. Try ALGORITHM=COPY

      Some version information:

      [root@db1 ~]# yum list installed | grep galera
      galera.x86_64                      25.3.37-1.el7.centos            @mariadb-main
      [root@db1 ~]# yum list installed | grep MariaDB
      MariaDB-backup.x86_64              10.3.36-1.el7.centos            @mariadb-main
      MariaDB-client.x86_64              10.3.36-1.el7.centos            @mariadb-main
      MariaDB-common.x86_64              10.3.36-1.el7.centos            @mariadb-main
      MariaDB-compat.x86_64              10.3.36-1.el7.centos            @mariadb-main
      MariaDB-server.x86_64              10.3.36-1.el7.centos            @mariadb-main
      

      I was wondering if this might be a known issue somehow? Or if this is really a bug? And if so is it a bug in Galera or in MariaDB?

      Attachments

        Issue Links

          Activity

            People

              hemantdangi Hemant Dangi
              bravoman Tom
              Votes:
              4 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 8.5d Original Estimate - 8.5d
                  8.5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 25d 5h
                  25d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.