sql/sql_alter.h
@@ -188,6 +188,12 @@ public:
   void apply_statistics_deletes_renames(THD *thd, TABLE *table);
 
 private:
+#ifdef WITH_WSREP
+  /* wsrep patch needs to peak the algorithm clause used in ALTER statement
+     in order to see if ALTER statement needs to be rewritten for replication
+  */
+public:
+#endif /* WITH_WSREP */
   // Type of ALTER TABLE algorithm.
   enum_alter_table_algorithm    requested_algorithm;
 
